--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
     <maven.compiler.target>1.8</maven.compiler.target>
 
     <infor.version>11.4</infor.version>
-    <infor.wsdls>https://raw.githubusercontent.com/infor-cloud/infor-eam/master/Infor%20EAM%20APIs%20for%20On%20Premise/Version%20${infor.version}/Wsdl</infor.wsdls>
+    <infor.wsdls>https://raw.githubusercontent.com/infor-cloud/infor-eam/master/Infor%20EAM%20APIs%20for%20On%20Premise/Version%20${infor.version}/wsdl</infor.wsdls>
   </properties>
 
   <licenses>
