--- a/pom.xml
+++ b/pom.xml
@@ -98,12 +98,12 @@
 
   <distributionManagement>
     <repository>
-      <id>eis</id>
-      <url>https://edmstools.cern.ch/nexus/content/repositories/ase-eds-releases</url>
+      <id>maven-staging</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
     </repository>
     <snapshotRepository>
-      <id>eis</id>
-      <url>https://edmstools.cern.ch/nexus/content/repositories/ase-eds-snapshots</url>
+      <id>maven-snapshots</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
     </snapshotRepository>
   </distributionManagement>
 
@@ -131,6 +131,17 @@
         </configuration>
       </plugin>
 
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <version>1.6.8</version>
+        <extensions>true</extensions>
+        <configuration>
+          <serverId>oss-cern-eam</serverId>
+          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+          <autoReleaseAfterClose>false</autoReleaseAfterClose>
+        </configuration>
+      </plugin>
 
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
